k8s/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: trading-demo
  labels:
    name: trading-demo
