k8s/deployment_frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: trading-demo-frontend
  name: trading-demo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trading-demo-frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: trading-demo-frontend
      annotations:
        instrumentation.opentelemetry.io/inject-java: "true"
    spec:
      containers:
      - image: inspectit/trading-demo
        name: trading-demo-frontend
        resources: {}
status: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ingress
spec:
  defaultBackend:
    service:
      name: trading-demo-frontend
      port:
        number: 8080
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: trading-demo-frontend
  name: trading-demo-frontend
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: trading-demo-frontend
status:
  loadBalancer: {}
