k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ingress
spec:
  defaultBackend:
    service:
      name: trading-demo
      port:
        number: 8080
status:
  loadBalancer: {}
